default/audiobookshelf/service.yml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-service
  namespace: default
spec:
  selector:
    app: audiobookshelf
  ports:
  - port: 80
    targetPort: 80
