default/audiobookshelf/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-ingressroute
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`abs.unrelated.family`)
      kind: Rule
      services:
        - name: audiobookshelf
          port: 80
#      middlewares:
#        - name: default-headers
#        - name: real-ip
  tls:
    secretName: unrelated-family-tls
